--- a/ClassLibrary.Core/ClassLibrary.Core.csproj
+++ b/ClassLibrary.Core/ClassLibrary.Core.csproj
@@ -127,11 +127,13 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MyTasksController.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Discipline.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MyTasksListViewModel.cs" />
     <Compile Include="Models\StudentTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
