--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -275,6 +275,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Scripts\jquery-2.2.1.min.map" />
     <Content Include="Views\MyTasks\Index.cshtml" />
+    <Content Include="Views\MyTasks\Description.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
