--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -276,6 +276,7 @@
     <Content Include="Scripts\jquery-2.2.1.min.map" />
     <Content Include="Views\MyTasks\List.cshtml" />
     <Content Include="Views\MyTasks\Description.cshtml" />
+    <Content Include="Views\MyStudents\NewTask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
