--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -280,6 +280,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Solutions\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
