--- a/ClassLibrary.Core/ClassLibrary.Core.csproj
+++ b/ClassLibrary.Core/ClassLibrary.Core.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Controllers\MyStudentsController.cs" />
     <Compile Include="Controllers\MyTasksController.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AllStudentsTasksListViewModel.cs" />
     <Compile Include="Models\Discipline.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\IdentityModels.cs" />
