--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -277,6 +277,7 @@
     <Content Include="Views\MyTasks\List.cshtml" />
     <Content Include="Views\MyTasks\Description.cshtml" />
     <Content Include="Views\MyStudents\NewTask.cshtml" />
+    <Content Include="Views\MyStudents\TasksList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
