--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -278,6 +278,7 @@
     <Content Include="Views\MyTasks\Description.cshtml" />
     <Content Include="Views\MyStudents\NewTask.cshtml" />
     <Content Include="Views\MyStudents\TasksList.cshtml" />
+    <Content Include="Views\MyStudents\Solution.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
