--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -279,6 +279,7 @@
     <Content Include="Views\MyStudents\NewTask.cshtml" />
     <Content Include="Views\MyStudents\TasksList.cshtml" />
     <Content Include="Views\MyStudents\Solution.cshtml" />
+    <Content Include="Views\MyStudents\EditTask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
