Добавить тесты для методов GetMyTasks() и GetMyTasksList()

--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <Compile Include="MyStudentsControllerTest.cs" />
     <Compile Include="MyStudentServiceTest.cs" />
+    <Compile Include="MyTasksServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
