--- a/ClassLibrary.Core/ClassLibrary.Core.csproj
+++ b/ClassLibrary.Core/ClassLibrary.Core.csproj
@@ -128,8 +128,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\MyStudentsController.cs" />
-    <Compile Include="Controllers\MyTasksController.cs" />
+    <Compile Include="Controllers\TeacherController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AllStudentsTasksListViewModel.cs" />
     <Compile Include="Models\Discipline.cs" />
