Реализовать вывод списка пользователей для админа.
- Реализованы контроллер и представление для вывода пользователей
- Реализована модель данных UsersListViewModel для вывода пользователей
- Реализован скрипт, отображающий DropDownList с группами студентов
только при выборе роли "Студенты"

--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -280,6 +280,7 @@
     <Content Include="Views\Teacher\TasksList.cshtml" />
     <Content Include="Views\Teacher\Solution.cshtml" />
     <Content Include="Views\Teacher\EditTask.cshtml" />
+    <Content Include="Views\Admin\UsersList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
